syntax = "proto3";

package erda.apps.aiproxy;
option go_package = "github.com/erda-project/erda-proto-go/apps/aiproxy/pb";

import "google/api/annotations.proto";
import "common/http.proto";

service Models {
  rpc ListModels(common.VoidRequest) returns (ListModelsRespData) {
    option(google.api.http) = {
      get: "/api/ai-proxy/models"
    };
  }
}

message ListModelsRespData {
  uint32 total = 1;
  repeated Model list = 2;
}

message Model {
  string model = 1;
}